--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,15 +16,30 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose --release
+    - name: Upload Build
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: linux_build
+        path: target/release/fchat3-log-merger
   windows_build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose --release
+    - name: Upload Build
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: windows_build
+        path: target/release/fchat3-log-merger.exe
   macos_build:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose --release
+    - name: Upload Build
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: macos_build
+        path: target/release/fchat3-log-merger
