--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "fchat3-log-merger"
 version = "1.1.0"
 authors = ["Carlen White <whitersuburban@gmail.com>"]
 edition = "2021"
+description = "Reads multiple F-Chat 3.0 client log folders and merges them together"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,8 +14,8 @@ lto = true
 fchat3-log-lib = {git = "https://github.com/WhiteHusky/fchat3-log-lib", branch = "hands-off"}
 
 [dependencies.clap]
-version = "~2"
-features = ["yaml"]
+version = "^3.0.4"
+features = ["derive"]
 
 [dependencies.humantime]
 version = "~2"
